Adding in more slides for chapter 9.

--- a/slides/cs380-chapter9.html
+++ b/slides/cs380-chapter9.html
@@ -65,11 +65,40 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                 </section>
 
                 <section>
+                    <h1 id="non-declarative_actions">Non-Declarative</h1>
+                    <p class="fragment">Print a report</p>
+                    <p class="fragment">Display results in a GUI</p>
+                    <p class="fragment">Interact with the user</p>
+                    <p class="fragment">Transmit data across the network</p>
+                </section>
+
+                <section>
                     <h1 id="application_programs_and_user_interfaces">Application Programs and User Interfaces</h1>
                 </section>
 
+                <section>
+                    <h1 id="the_web!">The Web!</h1>
+                </section>
 
+                <section>
+                    <h1 id="dynamic_versus_static">Dynamic versus Static</h1>
+                </section>
 
+                <section>
+                    <h1>Two-Tier versus Three-Tier</h1>
+                </section>
+
+                <section>
+                    <h1 id="client-side_versus_server-side">Client-Side versus Server-Side</h1>
+                </section>
+
+                <section>
+                    <h1 id="cache">Cache</h1>
+                </section>
+
+                <section>
+                    <h1 id="parallel_processing">Parallel Processing</h1>
+                </section>
 
 
 
