--- a/slides/cs380-chapter9.html
+++ b/slides/cs380-chapter9.html
@@ -92,6 +92,18 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <h1 id="client-side_versus_server-side">Client-Side versus Server-Side</h1>
                 </section>
 
+                <section data-background-transition="none" data-background="http://farm3.static.flickr.com/2331/1519450331_7bc6adad99_b.jpg" style="">
+                </section>
+
+                <section data-background-transition="none" data-background="http://farm3.static.flickr.com/2331/1519450331_7bc6adad99_b.jpg" style="background: rgba(29,31,33,0.9)">
+                    <h1 id="application_performance">Application Performance</h1>
+                    <p class="fragment">Throughput</p>
+                    <p class="fragment">Response time</p>
+                    <p class="fragment">Driving on the highway</p>
+                    <p class="fragment">Trade-offs</p>
+<br /><small><a href="http://creativecommons.org/licenses/by-nc-sa/2.0/">creative commons licensed ( BY-NC-SA )</a> <a title="worst. traffic jam. ever." href="http://flickr.com/photos/karavan/1519450331">flickr photo</a> shared by <a href="http://flickr.com/people/karavan">kara_vanmalssen</a></small>
+                </section>
+
                 <section>
                     <h1 id="cache">Cache</h1>
                 </section>
@@ -100,8 +112,18 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <h1 id="parallel_processing">Parallel Processing</h1>
                 </section>
 
+                <section data-background-transition="none" data-background="http://farm3.static.flickr.com/2832/9381766192_404c2c5962_b.jpg" style="">
+                </section>
 
-
+                <section data-background-transition="none" data-background="http://farm3.static.flickr.com/2832/9381766192_404c2c5962_b.jpg" style="background: rgba(29,31,33,0.9)">
+    <h1 id="application_security">Application Security</h1>
+                    <p class="fragment">SQL injection attacks</p>
+                    <p class="fragment">Cross-site scripting attacks</p>
+                    <p class="fragment">Password leakage</p>
+                    <p class="fragment">Authentication and authorization</p>
+                    <p class="fragment">Encryption</p>
+<br /><small><a href="http://creativecommons.org/licenses/by-nc/2.0/">creative commons licensed ( BY-NC )</a> <a title="The Hacker Company" href="http://flickr.com/photos/thomashawk/9381766192">flickr photo</a> shared by <a href="http://flickr.com/people/thomashawk">Thomas Hawk</a></small>
+                </section>
 
             </div>
 
