Adding in the first slides from the template for chapter23.

--- a/slides/cs380-chapter23.html
+++ b/slides/cs380-chapter23.html
@@ -60,7 +60,17 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
                 </section>
 
+                <section>
+                    <h1>Motivation for XML's Creation</h1>
+                </section>
 
+                <section>
+                    <h1 id="data_formats">Data Formats</h1>
+                    <p class="fragment">Structured</p>
+                    <p class="fragment">Semi-structured</p>
+                    <p class="fragment">Unstructured</p>
+                    <p class="fragment">Where does XML fit?</p>
+                </section>
 
 
             </div>
