--- a/slides/cs380-chapter23.html
+++ b/slides/cs380-chapter23.html
@@ -72,6 +72,27 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <p class="fragment">Where does XML fit?</p>
                 </section>
 
+                <section>
+                    <h1 id="markup_and_content">Markup and Content</h1>
+                </section>
+
+                <section>
+                    <h1 id="xml_and_html">XML and HTML</h1>
+                </section>
+
+                <section data-background-transition="none" data-background="http://farm6.static.flickr.com/5258/5464361650_bbd5639318_b.jpg" style="">
+                </section>
+
+                <section data-background-transition="none" data-background="http://farm6.static.flickr.com/5258/5464361650_bbd5639318_b.jpg" style="background: rgba(29,31,33,0.9)">
+                <h1 id="trade-offs">Trade-Offs</h1>
+                <p class="fragment">XML is for data exchange</p>
+                <p class="fragment">HTML is for document display</p>
+                <p class="fragment">Markup makes the content easier to understand ... </p>
+                <p class="fragment">But, markup adds to the space overhead of the data!</p>
+                <p class="fragment">Essentially, markup is like a repeated schema!</p>
+<br /><small><a href="http://creativecommons.org/licenses/by-nc-sa/2.0/">creative commons licensed ( BY-NC-SA )</a> <a title="F50" href="http://flickr.com/photos/dryheatpanzer/5464361650">flickr photo</a> shared by <a href="http://flickr.com/people/dryheatpanzer">DryHeatPanzer</a></small>
+                    </section>
+
 
             </div>
 
