Adding in more slides for the chapter23 content.

--- a/slides/cs380-chapter23.html
+++ b/slides/cs380-chapter23.html
@@ -91,8 +91,48 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                 <p class="fragment">But, markup adds to the space overhead of the data!</p>
                 <p class="fragment">Essentially, markup is like a repeated schema!</p>
 <br /><small><a href="http://creativecommons.org/licenses/by-nc-sa/2.0/">creative commons licensed ( BY-NC-SA )</a> <a title="F50" href="http://flickr.com/photos/dryheatpanzer/5464361650">flickr photo</a> shared by <a href="http://flickr.com/people/dryheatpanzer">DryHeatPanzer</a></small>
-                    </section>
+                </section>
 
+                <section>
+                    <h1 id="benefits_of_xml">Benefits of XML</h1>
+                    <p class="fragment">Self-documenting</p>
+                    <p class="fragment">Non-rigid document format</p>
+                    <p class="fragment">Support for nested structures</p>
+                    <p class="fragment">Widely accepted in many domains</p>
+                    <p class="fragment">See Figures 23.1 through 23.3 for examples!</p>
+                </section>
+
+                <section>
+                    <h1 id="document_type_definition">Document Type Definition</h1>
+                    <p class="fragment">State the type ...</p>
+                    <p class="fragment">... and then perform type checking!</p>
+                </section>
+
+                <section>
+                    <h1 id="dtd_problems">DTD Problems</h1>
+                    <p class="fragment">Cannot type check text elements and attributes</p>
+                    <p class="fragment">Cannot specify that subelements appear only once</p>
+                    <p class="fragment">Cannot state the destination of an ID or IDREF</p>
+                    <p class="fragment">What should be do?</p>
+                </section>
+
+                <section>
+                    <h1 id="xml_schema">XML Schema</h1>
+                    <p class="fragment">Handle all of the deficiencies of the DTD</p>
+                    <p class="fragment">Give options for minOccurs and maxOccurs</p>
+                    <p class="fragment">Define data that exists as a sequence of values</p>
+                    <p class="fragment">Define a namespace to avoid conflicts</p>
+                    <p class="fragment">Create complex types much like you can in Java!</p>
+                    <p class="fragment">You can even define primary and foreign keys!</p>
+                </section>
+
+                <section>
+                    <h1 id="querying_xml">Querying XML</h1>
+                    <p class="fragment">Xpath: path expressions are building blocks</p>
+                    <p class="fragment">XQuery: standard language for XML querying</p>
+                    <p class="fragment">XSLT: supports transformation and formatting</p>
+                    <p class="fragment">We can even write our own programs in Java!</p>
+                </section>
 
             </div>
 
