Added all of the slides for the chapter23 material.

--- a/slides/cs380-chapter23.html
+++ b/slides/cs380-chapter23.html
@@ -133,6 +133,31 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <p class="fragment">XSLT: supports transformation and formatting</p>
                     <p class="fragment">We can even write our own programs in Java!</p>
                 </section>
+                
+                <section>
+                    <h1 id="flwor_expressions">FLWOR Expressions</h1>
+                </section>
+
+                <section>
+                    <h1 id="dom_and_sax">XML Parsing</h1>
+                    <p class="fragment">DOM: Document Object Model</p>
+                    <p class="fragment">SAX: Simple API for XML</p>
+                    <p class="fragment">The most significant ways to parse XML in Java!</p>
+                    <p class="fragment">DOM supports parsing with a tree model </p>
+                    <p class="fragment">SAX triggers events during parsing</p>
+                </section>
+
+                <section>
+                    <h1 id="xml_storage">XML Storage</h1>
+                    <p class="fragment">File system</p> 
+                    <p class="fragment">Relational database</p>
+                    <p class="fragment">XML-aware database</p>
+                    <p class="fragment">What are the trade-offs?</p>
+                </section>
+
+                <section>
+                    <h1 id="xml_compression">XML Compression</h1>
+                </section>
 
             </div>
 
