Adding in the extra slides about XML. Now, ready to move onto the next chapter.

--- a/slides/cs380-chapter23.html
+++ b/slides/cs380-chapter23.html
@@ -157,6 +157,23 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
                 <section>
                     <h1 id="xml_compression">XML Compression</h1>
+                    <p class="fragment">What tools are available?</p>
+                    <p class="fragment">What are the empirical trade-offs?</p>
+                    <p class="fragment">Unusual characteristics of XML compression</p>
+                    <p class="fragment">You can try this using open source tools!</p>
+                </section>
+    
+                <section>
+                    <h1 id="applications_of_xml">XML Applications</h1>
+                    <p class="fragment">Storing data with complex structure</p>
+                    <p class="fragment">Standardizing data exchange formats</p>
+                    <p class="fragment">Web services</p>
+                    <p class="fragment">Data mediation</p>
+                    <p class="fragment">Debugging and testing</p>
+                </section>
+
+                <section>
+                    <h1 id="xml_trade-offs">Reviewing XML Trade-offs</h1>
                 </section>
 
             </div>
