Adding in more slides to the chapter22 content.

--- a/slides/cs380-chapter22.html
+++ b/slides/cs380-chapter22.html
@@ -67,8 +67,20 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <p class="fragment">Use object-relational mapping techniques</p>
                 </section>
 
+                <section>
+                    <h1 id="complex_data_types">Complex Data Types</h1>
+                </section>
 
+                <section>
+                    <h1 id="structured_types">Structured Types</h1>
+                    <p class="fragment">Available through the <code>create type</code> command</p>
+                    <p class="fragment">Allows for the creation of user-defined types</p>
+                    <p class="fragment">Provides for standard features like methods and constructors</p>
+                </section>
 
+                <section>
+                    <h1 id="array_and_multiset_types">Array and Multiset Types</h1>
+                </section>
 
 
 
