Adding the slides for the intro content in chapter20.

--- a/slides/cs380-chapter20.html
+++ b/slides/cs380-chapter20.html
@@ -64,6 +64,21 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <h1>Data Warehousing and Mining</h1>
                 </section>
 
+                <section>
+                    <h1 id="decision-support_systems">Decision-Support Systems</h1>
+                    <p class="fragment">Broad classification into two categories ... </p>
+                    <p class="fragment">... transaction-processing or decision-support</p>
+                    <p class="fragment">Goal: get actionable information about of the details!</p>
+                </section>
+
+                <section>
+                    <h1 id="decision-support_challenges">Decision-Support Challenges</h1>
+                    <p class="fragment">Not all queries can be expresses in SQL</p>
+                    <p class="fragment">Query languages are not suitable for detailed statistical analyses</p>
+                    <p class="fragment">Diverse data sources are not easily loaded into an RDBMS</p>
+                    <p class="fragment">Must combine expertise from a wide variety of areas</p>
+                </section>
+
             </div>
 
         </div>
