Adding the picture of a data warehouse.

--- a/slides/cs380-chapter20.html
+++ b/slides/cs380-chapter20.html
@@ -74,9 +74,13 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                 <section>
                     <h1 id="decision-support_challenges">Decision-Support Challenges</h1>
                     <p class="fragment">Not all queries can be expresses in SQL</p>
-                    <p class="fragment">Query languages are not suitable for detailed statistical analyses</p>
+                    <p class="fragment">Query languages are not best for statistical analyses</p>
                     <p class="fragment">Diverse data sources are not easily loaded into an RDBMS</p>
                     <p class="fragment">Must combine expertise from a wide variety of areas</p>
+                </section>
+
+                <section>
+                    <h1 id="components_of_a_data_warehouse">Components of a Data Warehouse</h1>
                 </section>
 
             </div>
