Adding in more slides for the chapter20 material.

--- a/slides/cs380-chapter20.html
+++ b/slides/cs380-chapter20.html
@@ -83,6 +83,28 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <h1 id="components_of_a_data_warehouse">Components of a Data Warehouse</h1>
                 </section>
 
+                <section>
+                    <h1 id="data_gathering">Data Gathering</h1>
+                    <p class="fragment">How? Push or pull methods</p>
+                    <p class="fragment">What schema?</p>
+                    <p class="fragment">How to transform and cleanse?</p>
+                    <p class="fragment">How to handle data updates?</p>
+                    <p class="fragment">What data to summarize?</p>
+                    <p class="fragment">ETL: Extract, transform, load</p>
+                </section>
+
+                <section>
+                    <h1 id="warehouse_schemas">Warehouse Schemas</h1>
+                    <p class="fragment">Fact table: a central, large table</p>
+                    <p class="fragment">Dimension table: smaller tables for specific data</p>
+                    <p class="fragment">We can create star and snowflake schemas!</p>
+                    <p class="fragment">See Figure 20.2 for an example!</p>
+                </section>
+
+                <section>
+                    <h1 id="column-oriented_storage">Column-Oriented Storage</h1>
+                </section>
+
             </div>
 
         </div>
