Adding in the slides from the big data book for chapter20.

--- a/slides/cs380-chapter20.html
+++ b/slides/cs380-chapter20.html
@@ -62,10 +62,42 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
                 <section>
                     <h1>Data Warehousing and Mining</h1>
-                </section>
+               </section>
 
-                <section>
+               <section>
                    <h1 id="big_data">Big Data</h1> 
+                   <p class="fragment">In 2013, stored information in the world is 1,200 exabytes!</p>
+                   <p class="fragment">Less than 2 percent of this is non-digital in format!</p>
+                   <p class="fragment">Information grows 4 times faster than world economy!</p>
+                   <p class="fragment">At its core, big data is all about making predictions!</p>
+               </section>
+
+               <section>
+                   <h1 id="three_trends_in_big_data">Five Trends in Big Data</h1>
+               </section>
+
+               <section>
+                   <h1 id="more">More</h1>
+               </section>
+
+               <section>
+                   <h1 id="messy">Messy</h1>
+               </section>
+
+               <section>
+                   <h1 id="good_enough">Good Enough</h1>
+               </section>
+
+               <section>
+                   <h1 id="correlation">Correlation</h1>
+               </section>
+
+               <section>
+                   <h1 id="datafication">Datafication</h1>
+               </section>
+
+               <section>
+                   <h1 id="what_are_the_risks?">What are the risks?</h1>
                </section>
 
                 <section>
