Adding in the slide about the column oriented storage.

--- a/slides/cs380-chapter20.html
+++ b/slides/cs380-chapter20.html
@@ -139,6 +139,10 @@ if( window.location.search.match( /print-pdf/gi ) ) {
 
                 <section>
                     <h1 id="column-oriented_storage">Column-Oriented Storage</h1>
+                    <p class="fragment">When is this approach the best?</p>
+                    <p class="fragment">Scanning and aggregating multiple tuples!</p>
+                    <p class="fragment">But, not widely used for transaction processing. Why?</p>
+                    <p class="fragment">Storing a fetching a single tuple requires many operations!</p>
                 </section>
 
             </div>
