Added in the additional slides about data mining and machine learning.

--- a/slides/cs380-chapter20.html
+++ b/slides/cs380-chapter20.html
@@ -142,7 +142,24 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <p class="fragment">When is this approach the best?</p>
                     <p class="fragment">Scanning and aggregating multiple tuples!</p>
                     <p class="fragment">But, not widely used for transaction processing. Why?</p>
-                    <p class="fragment">Storing a fetching a single tuple requires many operations!</p>
+                    <p class="fragment">Storing and fetching a single tuple requires many operations!</p>
+                </section>
+
+                <section>
+                    <h1 id="data_mining">Data Mining</h1>
+                    <p class="fragment">Analyzing large databases to find useful patterns</p>
+                    <p class="fragment">Descriptive patterns</p>
+                    <p class="fragment">Associations</p>
+                    <p class="fragment">Predictions</p>
+                    <p class="fragment">What kinds of algorithms can help?</p>
+                </section>
+
+                <section>
+                    <h1 id="machine_learning">Machine Learning</h1>
+                    <p class="fragment">Supervised</p>
+                    <p class="fragment">Un-supervised</p>
+                    <p class="fragment">Reinforcement</p>
+                    <p class="fragment">Training and Testing</p>
                 </section>
 
             </div>
