Added in the content about k-fold cross validation.

--- a/slides/cs380-chapter20.html
+++ b/slides/cs380-chapter20.html
@@ -160,6 +160,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <p class="fragment">Un-supervised</p>
                     <p class="fragment">Reinforcement</p>
                     <p class="fragment">Training and Testing</p>
+                    <p class="fragment">k-fold cross validation</p>
                 </section>
 
             </div>
