Removing a word from the chapter20 for better formatting.

--- a/slides/cs380-chapter20.html
+++ b/slides/cs380-chapter20.html
@@ -142,7 +142,7 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <p class="fragment">When is this approach the best?</p>
                     <p class="fragment">Scanning and aggregating multiple tuples!</p>
                     <p class="fragment">But, not widely used for transaction processing. Why?</p>
-                    <p class="fragment">Storing and fetching a single tuple requires many operations!</p>
+                    <p class="fragment">Storing and fetching a tuple requires many operations!</p>
                 </section>
 
                 <section>
