Added in many slides for the end of chapter20.

--- a/slides/cs380-chapter20.html
+++ b/slides/cs380-chapter20.html
@@ -161,6 +161,63 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <p class="fragment">Reinforcement</p>
                     <p class="fragment">Training and Testing</p>
                     <p class="fragment">k-fold cross validation</p>
+                    <p class="fragment">Avoiding an "overfit"</p>
+                </section>
+
+                <section>
+                    <h1 id="classification">Classification</h1>
+                    <p class="fragment">Study the examples on page 895</p>
+                    <p class="fragment">Decision-tree classifiers</p>
+                    <p class="fragment">Classification and regression trees</p>
+                    <p class="fragment">What is the difference?</p>
+                    <p class="fragment">Review the example on page 896</p>
+                    <p class="fragment">Greedy and global searches for the best split</p>
+                </section>
+
+                <section>
+                    <h1 id="other_types_of_classifiers?">Other Types of Classifiers?</h1>
+                </section>
+
+                <section>
+                    <h1 id="trade-offs_in_the_choice_of_classifier?">Trade-offs in the Choice of Classifier?</h1>
+                </section>
+
+                <section>
+                    <h1 id="evaluation_of_classifiers">Evaluation of Classifiers</h1>
+                    <p class="fragment">False positive</p>
+                    <p class="fragment">False negative</p>
+                    <p class="fragment">Accuracy and Recall</p>
+                    <p class="fragment">Precision and Specificity</p>
+                    <p class="fragment">Refer to page 903 for equations!</p>
+                </section>
+
+                <section>
+                    <h1 id="association_rule_mining">Association Rule Mining</h1>
+                    <p class="fragment">Please see page 904 for an example!</p>
+                    <p class="fragment">How are these rules useful?</p>
+                    <p class="fragment">Can consider both rules and their deviations</p>
+                    <p class="fragment">Also consider deviations from temporal patterns!</p>
+                </section>
+
+                <section>
+                    <h1 id="cluster_analysis">Cluster Analysis</h1>
+                    <p class="fragment">Hierarchical</p>
+                    <p class="fragment">Agglomerative</p>
+                    <p class="fragment">k-means clustering</p>
+                    <p class="fragment">How do you pick the distance function?</p>
+                    <p class="fragment">Why is this approach useful?</p>
+                </section>
+
+                <section>
+                    <h1 id="text_mining">Text Mining</h1>
+                </section>
+
+                <section>
+                    <h1 id="natural_language_processing">Natural Language Processing</h1>
+                </section>
+
+                <section>
+                    <h1 id="data_visualization">Data Visualization</h1>
                 </section>
 
             </div>
