Starting to add more slides for the demo in chapter20.

--- a/slides/cs380-chapter20.html
+++ b/slides/cs380-chapter20.html
@@ -220,6 +220,12 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <h1 id="data_visualization">Data Visualization</h1>
                 </section>
 
+                <section>
+                    <h1 id="let's_try_it!">Let's Try It!</h1>
+                </section>
+
+
+
             </div>
 
         </div>
