Adding the installation slide.

--- a/slides/cs380-chapter20.html
+++ b/slides/cs380-chapter20.html
@@ -224,7 +224,17 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <h1 id="let's_try_it!">Let's Try It!</h1>
                 </section>
 
-
+                <section>
+                    <h1 id="installation">Installation</h1>
+                    <p class="fragment">Enter the R environment by typing <code>R</code></p>
+                    <p class="fragment">We have to install several packages!</p>
+                    <p class="fragment">Be ready to wait for awhile!</p>
+                    <p class="fragment"><code>install.packages("formula")</code></p>
+                    <p class="fragment"><code>install.packages("evtree")</code></p>
+                    <p class="fragment"><code>install.packages("partykit")</code></p>
+                    <p class="fragment">Pick a CRAN mirror in PA</p>
+                    <p class="fragment">Did your installation work correctly?</p>
+                </section>
 
             </div>
 
