Added more slides to the chapter20 content about CART.

--- a/slides/cs380-chapter20.html
+++ b/slides/cs380-chapter20.html
@@ -236,6 +236,29 @@ if( window.location.search.match( /print-pdf/gi ) ) {
                     <p class="fragment">Did your installation work correctly?</p>
                 </section>
 
+<!-- BBBClub -->
+<!-- summary(BBBClub) -->
+
+                <section>
+                    <h1 id="data_viewing">Data Viewing</h1>
+                    <p class="fragment">Let's load the data set!</p>
+                    <p class="fragment"><code>data("BBBClub", package="evtree")</code></p>
+                    <p class="fragment"><code>BBBClub</code></p>
+                    <p class="fragment"><code>summary(BBBClub)</code></p>
+                    <p class="fragment">What are the exploratory variables?</p>
+                    <p class="fragment">What attribute are we trying to predict?</p>
+                    <p class="fragment">Can you find any patterns in the data set?</p>
+                </section>
+
+                <section>
+                    <h1 id="predictions">Predictions</h1>
+                    <p class="fragment">Goal: build a predictive model of customer choice</p>
+                    <p class="fragment">Can we know when a customer will purchase the book?</p>
+                    <p class="fragment">Do you have any intuitive predictions?</p>
+                    <p class="fragment">How did you form those predictions?</p>
+                    <p class="fragment">Are those predictions actually correct?</p>
+                    <p class="fragment">Let's use machine learning to predict!</p>
+                </section>
             </div>
 
         </div>
